# vdownloader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  bootstrap.sh  c-cpp.yml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: c-cpp.yml
benchmarking/: CMakeLists.txt  benchmarking.py  ffmpeg_benchmark.py  ffmpeg_parallel_benchmark.py  invoke_ffmpeg.py  invoke_ffmpeg_parallel.py  reference_benchmark.py  rm_content.py  single_run_benchmark.py  threading_benchmark.py
cmake/: valgrind.cmake
src/: CMakeLists.txt  Main.cpp  main.cpp
src/libav/: errors.cpp  errors.h  libav.cpp  libav.h
src/vd/: Ap4ByteStream.h  Ap4Headers.h  Ap4Helpers.h  Ap4HttpStream.cpp  Ap4HttpStream.h  Decoder.cpp  Decoder.h  DecodingUtils.cpp  DecodingUtils.h  Errors.cpp  Errors.h  ImageFormats.cpp  ImageFormats.h  Libav.h  LibavH264Decoder.cpp  LibavH264Decoder.h  LibavUtils.cpp  LibavUtils.h  Mp4Container.cpp  Mp4Container.h  Mp4Utils.cpp  Mp4Utils.h  OpenH264Decoder.cpp  OpenH264Decoder.h  Options.cpp  Options.h  Preprocessor.h  Sources.cpp  Sources.h  Tga.cpp  Tga.h  Track.cpp  Track.h  Utils.cpp  Utils.h  VideoStream.cpp  VideoStream.h  VideoUtils.cpp  VideoUtils.h
tests/: Ap4ByteStreamTests.cpp  Ap4HelpersTests.cpp  CMakeLists.txt  DecoderTests.cpp  FormatContextTests.cpp  HttpSourceTests.cpp  LibavUtilsTests.cpp  Mp4ContainerTests.cpp  OptionsTests.cpp  SourcesTests.cpp  TestContainer.h  TrackTests.cpp  UtilsTests.cpp  VideoStreamTests.cpp  VideoUtilsTests.cpp
tests/data/: sample__240__libx265__aac__30s__video.mkv
